--- a/languages/qts-pt_PT.po
+++ b/languages/qts-pt_PT.po
@@ -5,14 +5,14 @@ msgstr ""
 "Project-Id-Version: qTranslate slug\n"
 "Report-Msgid-Bugs-To: http://wordpress.org/tag/qtranslate-slug\n"
 "POT-Creation-Date: 2015-01-23 14:23-0000\n"
-"PO-Revision-Date: 2015-01-23 15:26-0000\n"
+"PO-Revision-Date: 2016-09-28 14:12+0100\n"
 "Last-Translator: Pedro Mendonça <ped.gaspar@gmail.com>\n"
 "Language-Team: Pedro Mendonça <ped.gaspar@gmail.com>\n"
 "Language: pt_PT\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 1.7.3\n"
+"X-Generator: Poedit 1.8.9\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Poedit-SourceCharset: UTF-8\n"
 "X-Poedit-KeywordsList: __;_e;__ngettext;_n;__ngettext_noop;_n_noop;_x;_nx;"
@@ -150,7 +150,7 @@ msgid ""
 "adds a minified ( slighlty faster) file (qts-default.min.css) to the theme's "
 "header."
 msgstr ""
-"adiciona um ficheiro minimizado (qts-default.min.css), ligeiramente mais "
+"adiciona um ficheiro minificado (qts-default.min.css), ligeiramente mais "
 "rápido, ao cabeçalho do tema."
 
 #: ../includes/qtranslate-slug-settings-options.php:67
@@ -167,7 +167,7 @@ msgstr "ficheiro"
 
 #: ../includes/qtranslate-slug-settings-options.php:74
 msgid "minified"
-msgstr "minimizado"
+msgstr "minificado"
 
 #: ../includes/qtranslate-slug-settings-options.php:75
 msgid "inline"
